<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="wrap_content">
<ScrollView
		android:layout_width="fill_parent" android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_choosedatetime" android:id="@+id/textView1"></TextView>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">
        <DatePicker android:id="@+id/datePicker1" android:layout_height="0dip" android:layout_width="fill_parent" android:textSize="7sp" android:layout_weight=".50"/>
        <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout3" android:layout_height="wrap_content" android:layout_weight=".50">
            <TimePicker android:id="@+id/timePicker1" android:layout_height="wrap_content" android:layout_width="0dip" android:layout_weight=".50"></TimePicker>
            <LinearLayout android:layout_width="wrap_content" android:id="@+id/linearLayout4" android:layout_height="fill_parent" android:orientation="vertical" android:layout_weight=".20">
                
                <Button android:text="@string/button_adddate" android:id="@+id/addtodates" android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
                <Button android:text="@string/button_removelast" android:id="@+id/remlastdate" android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
                <Button android:text="@string/button_done" android:id="@+id/seldatedone" android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView android:text="@string/label_selecteddates" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText android:layout_width="fill_parent" android:id="@+id/datetimeslist" android:layout_height="wrap_content" android:editable="false" android:focusableInTouchMode="false" android:focusable="false"/>
	
</LinearLayout>
</ScrollView>
</LinearLayout>
